
package(default_visibility = ["//visibility:public"])

load("//defs:lib.bzl", closure_js_library="js_library")


closure_js_library(
    name = "storage",
    srcs = ["storage.js"],
    deps = [
        "//src/base:init",
        "//src/db:init",
        "@io_bazel_rules_closure//closure/library/db:db",
        "@io_bazel_rules_closure//closure/library/db:indexeddb",
        "@io_bazel_rules_closure//closure/library/db:objectstore",
        "@io_bazel_rules_closure//closure/library/pubsub:topicid",
        "@io_bazel_rules_closure//closure/library/pubsub:typedpubsub",
        "@io_bloombox_schema//sources/public/models/products/menu:Section-closure_proto",
        "@io_bloombox_schema//sources/public/models/products/menu:Menu-closure_proto"])

closure_js_library(
    name = "observable",
    srcs = ["observable.js"],
    deps = [
        "//src/base:logging",
        "@io_bloombox_schema//sources/private/services/menu/v1beta1:Menu-closure_proto",
        "@com_google_grpc_web//javascript/net/grpc/web:statuscode",
        "@io_bazel_rules_closure//closure/library/db:db",
        "@io_bazel_rules_closure//closure/library/pubsub:topicid",
        "@io_bazel_rules_closure//closure/library/pubsub:typedpubsub"])

closure_js_library(
    name = "local-v1",
    srcs = ["local-v1.js"],
    deps = [
        "//src/db:init",
        "//src/util:base64",
        "//src/menu:menu-api",
        "@io_bloombox_schema//sources/private/services/menu/v1beta1:Menu-closure_proto"])

closure_js_library(
    name = "remote-v1",
    srcs = ["remote-v1.js"],
    deps = [
        ":storage",
        ":observable",
        "//src/base:init",
        "//src/rpc:rpc",
        "//src/menu:menu-api",
        "//src/util:base64",
        "//third_party:menu-service",
        "@io_bloombox_schema//sources/private/services/menu/v1beta1:Menu-closure_proto",
        "@io_bloombox_schema//sources/public/models/products/menu:Section-closure_proto"])


closure_js_library(
    name = "v1beta1",
    exports = [
        ":storage",
        ":observable",
        ":local-v1",
        ":remote-v1"])
