
package(default_visibility = ["//visibility:public"])

load("//defs:lib.bzl", closure_js_library="js_library")


closure_js_library(
    name = "base",
    srcs = ["base.js"],
    deps = [
        ":collection",
        "//src/base:init",
        "//src/menu:menu-api",
        "//src/util:exportable",
        "//src/util:serializable",
        "@io_bloombox_schema//sources/private/models/analytics:Context-closure_proto",
        "@io_bloombox_schema//sources/private/models/analytics:Scope-closure_proto",
        "@io_bloombox_schema//sources/private/models/analytics/context:Library-closure_proto",
        "@io_bloombox_schema//sources/private/models/analytics/context:Application-closure_proto",
        "@io_bloombox_schema//sources/private/models/analytics/context:Browser-closure_proto",
        "@io_bloombox_schema//sources/private/models/analytics/context:NativeDevice-closure_proto",
        "@io_bloombox_schema//sources/private/models/identity:UserKey-closure_proto",
        "@io_bloombox_schema//sources/private/models/partner:LocationKey-closure_proto",
        "@io_bloombox_schema//sources/private/models/partner:PartnerKey-closure_proto",
        "@io_bloombox_schema//sources/private/models/partner:PartnerDevice-closure_proto",
        "@io_bloombox_schema//sources/public/models/commerce:Order-closure_proto",
        "@io_bloombox_schema//sources/public/models/structs:Version-closure_proto"])

closure_js_library(
    name = "browser",
    srcs = ["browser.js"],
    deps = [
        "@io_bazel_rules_closure//closure/library/useragent:all_js",
        "@io_bazel_rules_closure//closure/library/labs/useragent:device",
        "@io_bloombox_schema//sources/private/models/analytics/context:Browser-closure_proto",
        "@io_bloombox_schema//sources/public/models/structs:Version-closure_proto"])

closure_js_library(
    name = "collection",
    srcs = ["collection.js"],
    deps = [
        "//src/util:exportable",
        "//src/util:serializable",
        "//src/util:base64",
        "@io_bloombox_schema//sources/private/models/analytics/context:Collection-closure_proto"])

closure_js_library(
    name = "native",
    srcs = ["native.js"],
    deps = [
        "@io_bazel_rules_closure//closure/library/useragent:all_js",
        "@io_bazel_rules_closure//closure/library/labs/useragent:device",
        "@io_bloombox_schema//sources/private/models/analytics/context:OS-closure_proto",
        "@io_bloombox_schema//sources/private/models/analytics/context:NativeDevice-closure_proto",
        "@io_bloombox_schema//sources/public/models/device:Device-closure_proto",
        "@io_bloombox_schema//sources/public/models/structs:Version-closure_proto"])

closure_js_library(
    name = "webapp",
    srcs = ["webapp.js"],
    deps = [
        "@io_bloombox_schema//sources/private/models/analytics/context:Application-closure_proto"])

closure_js_library(
    name = "state",
    srcs = ["state.js"],
    deps = [
        ":browser",
        ":native",
        ":webapp",
        "//src/db:storage",
        "//src/telemetry/context:base",
        "//src/util:uuid",
        "//src/util:error-reporting",
        "@io_bloombox_schema//sources/private/models/analytics/context:Application-closure_proto"])


closure_js_library(
    name = "context",
    exports = [
        ":base",
        ":browser",
        ":collection",
        ":native",
        ":webapp",
        ":state"])
